[gd_scene load_steps=8 format=3 uid="uid://qh76bv7y2534"]

[ext_resource type="Script" path="res://Scripts/InventoryUI.gd" id="1_yt8oo"]

[sub_resource type="Animation" id="Animation_4rtdd"]
resource_name = "close"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.052556),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 0.8)]
}

[sub_resource type="Animation" id="Animation_mwyvu"]
resource_name = "open"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 8.28212),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.125),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xrri4"]
_data = {
"close": SubResource("Animation_4rtdd"),
"open": SubResource("Animation_mwyvu")
}

[sub_resource type="LabelSettings" id="LabelSettings_otg3u"]

[sub_resource type="LabelSettings" id="LabelSettings_ur6jj"]

[sub_resource type="LabelSettings" id="LabelSettings_uao1d"]

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yt8oo")

[node name="MainMenu" type="Panel" parent="."]
layout_mode = 0
offset_left = 236.0
offset_top = 52.0
offset_right = 862.0
offset_bottom = 571.0

[node name="BoxBotones" type="VBoxContainer" parent="MainMenu"]
layout_mode = 0
offset_left = 12.0
offset_top = 14.0
offset_right = 162.0
offset_bottom = 115.0

[node name="Objetos" type="Button" parent="MainMenu/BoxBotones"]
layout_mode = 2
text = "Objetos"

[node name="Habilidades" type="Button" parent="MainMenu/BoxBotones"]
layout_mode = 2
text = "Habilidades"

[node name="Salir" type="Button" parent="MainMenu/BoxBotones"]
layout_mode = 2
text = "Salir"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xrri4")
}

[node name="Panel_Items" type="VBoxContainer" parent="." node_paths=PackedStringArray("shortcut_context")]
layout_mode = 0
offset_left = 429.0
offset_top = 79.0
offset_right = 743.0
offset_bottom = 524.0
shortcut_context = NodePath("../MainMenu/BoxBotones/Objetos")

[node name="Label" type="Label" parent="Panel_Items"]
layout_mode = 2
text = "Label 1
"
label_settings = SubResource("LabelSettings_otg3u")

[node name="Label2" type="Label" parent="Panel_Items"]
layout_mode = 2
text = "Label 1
"
label_settings = SubResource("LabelSettings_ur6jj")

[node name="Label3" type="Label" parent="Panel_Items"]
layout_mode = 2
text = "Label 3"
label_settings = SubResource("LabelSettings_uao1d")
